k8s/apps/justorderit/backend/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'
    prometheus.io/path: '/q/metrics'
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
