k8s/apps/justorderit/backend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  rules:
    - host: backend.justorderit.sontaran.gastbob40.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
  tls:
    - hosts:
        - backend.justorderit.sontaran.gastbob40.ovh
      secretName: backend-justorderit-tls
